vlib/v/checker/tests/main_return_err.vv
fn main() f64 {
	return 1.23
}
